navbar alignment corrected

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -27,21 +27,30 @@
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   margin-top: 20px; /* Adjust margin for smaller screens */
+  
 }
 
 .about h2,
 .content p {
   margin: 0;
+ 
 }
 
 .paragraph-container {
   flex-basis: 100%; /* Ensure each paragraph takes full width on smaller screens */
   font-size: 30px;
-  text-align: justify; /* Ensure the text takes up the full width */
+  text-align: center; /* Ensure the text takes up the full width */
   margin-bottom: 20px; /* Add spacing between paragraphs */
 }
 @media screen and (min-width: 768px) {
   .about {
     margin-top: 250px;
   }
+
+  .paragraph-container {
+    text-align: justify;
+
+  }
+
+  
 }
