--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -117,10 +117,23 @@ textarea {
 
 @media (max-width: 768px) {
     .submit-btn {
-        width:100%;
+        width:50%;
         float: none;
         text-align:center;
+        margin-left: 50px;
     }
+
+    
+    .input-container{
+        width: 75%;
+        margin-left: 20px;
+        margin-right: 5px;
+       
+
+        
+    }
+    
+
 }
 
 input[type=checkbox] + label {
@@ -133,4 +146,3 @@ input[type=checkbox]:checked + label {
   font-style: normal;
 }
   
- 
